--- a/index.html
+++ b/index.html
@@ -1922,14 +1922,14 @@
                 </div>
                 <h3>MoxxieVR</h3>
                 <p class="role">The Legend Himself</p>
-                <p>The gorilla-shaped mastermind who somehow dodges Meta's ban hammer while making content that makes people question their life choices... and then subscribe anyway.</p>
+                <p>The gorilla-shaped mastermind who somehow dodges Gorilla Tag's ban hammer while making content that makes people question their life choices... and then subscribe anyway.</p>
             </div>
             <div class="team-member">
                 <div class="img-container">
                     <img alt="OddsJuix">
                 </div>
                 <h3>OddsJuix</h3>
-                <p class="role">Website Wizard</p>
+                <p class="role">The Goatest Goat</p>
                 <p>The digital duct tape holding this website together. Can fix any bug with a Red Bull and a prayer. Responsible for any pixels that aren't exploding on your screen right now.</p>
             </div>
             <div class="team-member">
@@ -1938,7 +1938,7 @@
                 </div>
                 <h3>Polo</h3>
                 <p class="role">Idea Generator</p>
-                <p>Throws out video ideas like confetti at a parade. Half of them are pure genius, the other half would probably get us arrested. We usually go with the second half.</p>
+                <p>Throws out video ideas like confetti at Moxxie's birthday. Half of them are pure genius, the other half would probably get us arrested. We usually go with the second half.</p>
             </div>
             <div class="team-member">
                 <div class="img-container">
@@ -1955,12 +1955,10 @@
     <section class="videos" id="videos">
         <h2>GORILLA MAYHEM</h2>
         <div class="videos-container">
-            <!-- Videos will be loaded dynamically from the database -->
         <div id="videos-container"></div>
         </div>
     </section>
 
-    <!-- Game Section -->
     <section class="game-section" id="game">
         <h2>BANANA CATCHER</h2>
         <p>Help Moxxie catch falling bananas while avoiding the bombs! Use left and right arrow keys to move.</p>
@@ -1976,8 +1974,7 @@
             </div>
         </div>
     </section>
-
-    <!-- Meme Generator -->
+    
     <section class="meme-generator" id="meme">
         <h2>GORILLA MEME FACTORY</h2>
         <p>Create your own Gorilla Tag memes! Just add your text and let the magic happen.</p>
@@ -1992,7 +1989,7 @@
                     <option value="gorilla4">Banana Gorilla</option>
                     <option value="gorilla5">Space Gorilla</option>
                 </select>
-                <button id="generate-meme">CREATE MEME</button>
+                <button id="generate-meme">CREATE MEME (WILL NOT WORK)</button>
             </div>
             <div class="meme-preview">
                 <div class="meme-text meme-text-top">TOP TEXT</div>
@@ -2020,7 +2017,7 @@
     <section class="social-media" id="social">
         <h2>FOLLOW THE MADNESS</h2>
         <div class="social-icons">
-            <a href="https://www.youtube.com/@MoxxieVR" target="_blank"><i class="fab fa-youtube"></i></a>
+            <a href="https://www.youtube.com/@MoxxieVR_" target="_blank"><i class="fab fa-youtube"></i></a>
             <a href="#" target="_blank"><i class="fab fa-twitter"></i></a>
             <a href="#" target="_blank"><i class="fab fa-instagram"></i></a>
             <a href="#" target="_blank"><i class="fab fa-tiktok"></i></a>
@@ -2048,7 +2045,7 @@
                     <i class="fas fa-chevron-down"></i>
                 </div>
                 <div class="faq-answer">
-                    <p>We've conducted extensive scientific research and can confirm that MoxxieVR is approximately 60% gorilla, 30% caffeine, and 10% questionable life decisions. DNA tests were inconclusive as the lab technician got distracted watching his videos.</p>
+                    <p>We've conducted extensive scientific research and can confirm that MoxxieVR is approximately 60% gorilla, 30% caffeine, and 14% questionable life decisions. DNA tests were inconclusive as the lab technician got distracted watching his videos.</p>
                 </div>
             </div>
             <div class="faq-item">
@@ -2084,7 +2081,7 @@
                     <i class="fas fa-chevron-down"></i>
                 </div>
                 <div class="faq-answer">
-                    <p>Absolutely not. We're starting a "passionate community of like-minded individuals who share an enthusiasm for primate-themed virtual reality escapades." Totally different thing. (Polo, please stop ordering the robes. We talked about this.)</p>
+                    <p>Absolutely not (maybe). We're starting a "passionate community of like-minded individuals who share an enthusiasm for primate-themed virtual reality escapades." Totally different thing. (Polo, please stop ordering the robes. We talked about this.)</p>
                 </div>
             </div>
         </div>
