--- a/index.html
+++ b/index.html
@@ -1868,7 +1868,7 @@
             <h1 class="glitch-text" data-text="MOXXIEVR">MOXXIEVR</h1>
         </div>
         <p>Welcome to the absolute CHAOS that is MoxxieVR - where Gorilla Tag meets questionable life choices and somehow becomes YouTube content that people actually watch!</p>
-        <a href="https://www.youtube.com/@MoxxieVR?sub_confirmation=1" target="_blank" class="subscribe-btn">
+        <a href="https://www.youtube.com/@moxxievr_" target="_blank" class="subscribe-btn">
             <i class="fab fa-youtube"></i> SUBSCRIBE NOW
         </a>
         <p id="dynamic-text"></p>
@@ -1929,7 +1929,7 @@
 
     <section class="game-section" id="game">
         <h2>BANANA CATCHER (fixing)</h2>
-        <p>Help Moxxie catch falling bananas while avoiding the bombs! Use left and right arrow keys to move.</p>
+        <p>This will not work for 3-5 more weeks.</p>
         <div class="game-container">
             <div class="game-score">Score: 0</div>
             <div class="game-lives">Lives: 3</div>
@@ -1945,7 +1945,7 @@
     
     <section class="meme-generator" id="meme">
         <h2>GORILLA MEME FACTORY</h2>
-        <p>Create your own Gorilla Tag memes! Just add your text and let the magic happen.</p>
+        <p>This is a WIP, this will not be working unti June 18th.</p>
         <div class="meme-container">
             <div class="meme-form">
                 <input type="text" id="top-text" placeholder="Top Text">
