--- a/index.html
+++ b/index.html
@@ -2463,28 +2463,28 @@
         <h2 class="text-clip">Meet The Team</h2>
         <div class="team-grid">
             <div class="team-member animated-border glow-effect">
-                <img src="OddsJuix/WEB/Moxxie.png" alt="Moxxie" class="team-img">
+                <img src="Moxxie.png" alt="Moxxie" class="team-img">
                 <div class="team-info">
                     <h3 class="text-shadow-pop">Moxxie</h3>
                     <p>The woman, the myth, the legend. Creator and star of MoxxieVR.</p>
                 </div>
             </div>
             <div class="team-member animated-border glow-effect">
-                <img src="OddsJuix/WEB/Polo_PFP.png" alt="Polo" class="team-img">
+                <img src="Polo_PFP.png" alt="Polo" class="team-img">
                 <div class="team-info">
                     <h3 class="text-shadow-pop">Polo</h3>
                     <p>The ideas guy. Responsible for all the crazy concepts (and ordering robes).</p>
                 </div>
             </div>
             <div class="team-member animated-border glow-effect">
-                <img src="OddsJuix/WEB/Untitled.jpg" alt="OddsJuix" class="team-img">
+                <img src="Untitled.jpg" alt="OddsJuix" class="team-img">
                 <div class="team-info">
                     <h3 class="text-shadow-pop">OddsJuix</h3>
                     <p>Website designer extraordinaire. The digital architect behind our online presence.</p>
                 </div>
             </div>
             <div class="team-member animated-border glow-effect">
-                <img src="OddsJuix/WEB/Myles_PFP.png" alt="Myles" class="team-img">
+                <img src="Myles_PFP.png" alt="Myles" class="team-img">
                 <div class="team-info">
                     <h3 class="text-shadow-pop">Myles</h3>
                     <p>Him (editor). The creative genius behind our video edits.</p>
@@ -2498,7 +2498,7 @@
         <div class="videos-grid">
             <div class="video-card animated-border glow-effect">
                 <div class="play-icon"></div>
-                <img src="<img src="OddsJuix/WEB/Thumbnail.png" alt="Video Thumbnail" class="video-thumbnail">
+                <img src="<img src="Thumbnail.png" alt="Video Thumbnail" class="video-thumbnail">
                 <div class="video-info">
                     <h3 class="text-shadow-pop">The Mummy “Falls Into Place” | A Gorilla Tag Movie</h3>
                     <p>This is episode two of the mummy, biggest project ever. 400-500 views and 30-40 likes and you’ll get a ep:3.</p>
