--- a/index.html
+++ b/index.html
@@ -2605,6 +2605,12 @@
                 <p>Legend says that Flowzz stays up until 3 AM every night studying YouTube algorithms and sacrificing energy drinks to the monetization gods. We remain hopeful, but the YouTube gods are fickle. (Flowzz says to tell you "It's happening any day now!" while sobbing quietly.)</p>
             </div>
         </div>
+        <div class="faq-item animated-border glow-effect">
+            <div class="faq-question">Does OddsJuix have other members to help?</div>
+            <div class="faq-answer">
+                <p>Sadly no, OddsJuix needs at least a team of 3 members to work on the website for updates to come out every day.</p>
+            </div>
+        </div>
     </section>
 
     <footer>
