ah yes a update

--- a/index.html
+++ b/index.html
@@ -2470,7 +2470,7 @@
                 </div>
             </div>
             <div class="team-member animated-border glow-effect">
-                <img src="Polo_PFP.png" alt="Polo" class="team-img">
+                <img src="polo.webp" alt="Polo" class="team-img">
                 <div class="team-info">
                     <h3 class="text-shadow-pop">Polo</h3>
                     <p>The ideas guy. Responsible for all the crazy concepts (and ordering robes).</p>
