--- a/index.html
+++ b/index.html
@@ -2498,7 +2498,7 @@
         <div class="videos-grid">
             <div class="video-card animated-border glow-effect">
                 <div class="play-icon"></div>
-                <img src="<img src="Thumbnail.png" alt="Video Thumbnail" class="video-thumbnail">
+                <img src="Thumbnail.png" alt="Video Thumbnail" class="video-thumbnail">
                 <div class="video-info">
                     <h3 class="text-shadow-pop">The Mummy “Falls Into Place” | A Gorilla Tag Movie</h3>
                     <p>This is episode two of the mummy, biggest project ever. 400-500 views and 30-40 likes and you’ll get a ep:3.</p>
