--- a/index.html
+++ b/index.html
@@ -2477,6 +2477,14 @@
                     <p>Him (editor). The creative genius behind our video edits.</p>
                 </div>
             </div>
+                        <div class="team-member animated-border glow-effect">
+                <img src="Millie.png" alt="Millie" class="team-img">
+                <div class="team-info">
+                    <h3 class="text-shadow-pop">Millie</h3>
+                    <p>millie brings the ✨energy✨, the ideas, and occasionally snacks (usually stolen).</p>
+                    <p>we don’t know how she got here, but we’re too scared to ask.</p>
+                </div>
+            </div>
         </div>
     </section>
 
@@ -2497,7 +2505,7 @@
 
     <!-- Advertisement Banner -->
     <div class="ad-banner">
-        🎮 SPONSORED: Join r/developer4hire 🎮
+        🎮 SPONSORED: Join r/developershowoff 🎮
          <img src="Advertisement.png" alt="Advertisement" class="Advertisement">
     </div>
 
@@ -2539,13 +2547,13 @@
 
     <section id="community">
         <h2 class="text-clip">Community Highlights</h2>
-        <p class="bounce-in">Our amazing community is what makes MoxxieVR special! Check out these incredible fan contributions and join our growing family of Gorilla Tag enthusiasts.</p>
+        <p class="bounce-in">Our amazing community is what makes MoxxieVR special! Check out these incredible fan contributions and join our growing family of Gorilla Tag fans.</p>
     </section>
 
     <section id="funny">
         <div class="floating-shapes"></div>
         <h2 class="text-clip">Funny Moments</h2>
-        <p class="flip-in">Relive some of the most hilarious moments from our Gorilla Tag adventures! From unexpected falls to bizarre glitches, these clips are guaranteed to make you laugh.</p>
+        <p class="flip-in">Relive some of the most funny moments from our Gorilla Tag adventures! From unexpected falls to bizarre glitches, these clips are guaranteed to make you laugh.</p>
     </section>
 
     <section id="tips">
@@ -2556,7 +2564,7 @@
     <section id="fanart">
         <div class="floating-shapes"></div>
         <h2 class="text-clip">Fan Art Gallery</h2>
-        <p class="blur-in">Check out these amazing creations from our talented community members! We love seeing your artistic interpretations of MoxxieVR and Gorilla Tag.</p>
+        <p class="blur-in">Check out these amazing creations from our talented community members! We love seeing your artistic drawings of MoxxieVR! (COMING SOON!)</p>
     </section>
 
     <section id="social">
